@@ -1,6 +1,6 @@
 /*
  * aoserv-daemon - Server management daemon for the AOServ Platform.
- * Copyright (C) 2006-2013, 2016, 2017, 2018, 2019, 2020, 2021, 2022, 2024  AO Industries, Inc.
+ * Copyright (C) 2006-2013, 2016, 2017, 2018, 2019, 2020, 2021, 2022, 2024, 2025  AO Industries, Inc.
  *     support@aoindustries.com
  *     7262 Bull Pen Cir
  *     Mobile, AL 36695
@@ -146,9 +146,9 @@ public final class MySQLServerManager extends BuilderThread {
         Server.Name serverName = ms.getName();
         String jdbcUrl;
         if (port == Server.DEFAULT_PORT) {
-          jdbcUrl = "jdbc:mysql://127.0.0.1/" + URLEncoder.encode(md.getName().toString(), StandardCharsets.UTF_8.name()) + "?useSSL=false"; // Java 10: No .name()
+          jdbcUrl = "jdbc:mysql://127.0.0.1/" + URLEncoder.encode(md.getName().toString(), StandardCharsets.UTF_8) + "?useSSL=false";
         } else {
-          jdbcUrl = "jdbc:mysql://127.0.0.1:" + port.getPort() + "/" + URLEncoder.encode(md.getName().toString(), StandardCharsets.UTF_8.name()) + "?useSSL=false"; // Java 10: No .name()
+          jdbcUrl = "jdbc:mysql://127.0.0.1:" + port.getPort() + "/" + URLEncoder.encode(md.getName().toString(), StandardCharsets.UTF_8) + "?useSSL=false";
         }
         pool = new AOConnectionPool(
             AoservDaemonConfiguration.getMySqlDriver(),
